--- a/src/index.css
+++ b/src/index.css
@@ -4,17 +4,5 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 812px;
-}
-
-.welcome-text{
-  font-size: 28px;
-  text-align: left;
-  font-weight: bold;
-}
-
-.text-p{
-  text-align: left;
-  opacity: 60%;
-  font-size: 18px;
+  height: 100vh;
 }
