--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,13 @@
 
 body{
   display: flex;
+  box-sizing: border-box;
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+
+.box-shadow{
+  box-shadow: 0px 3px 6px #00000007;
 }
