--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 body{
   display: flex;
   box-sizing: border-box;
+  overflow-y: hidden;
   justify-content: center;
   align-items: center;
   height: 100vh;
